--- a/_posts/2020-03-30-C++_sort.md
+++ b/_posts/2020-03-30-C++_sort.md
@@ -12,6 +12,7 @@ categories: [C++]
 
 > **sorting** algorithm is already implemented in C++ library  
 > Defined in header <u>algorithm</u>  
+> C ++ std::**sort** library sorts the data in ascending order by index order by default  
 
 
 ```cpp
