--- a/_posts/2021-03-22-C++_reserve.md
+++ b/_posts/2021-03-22-C++_reserve.md
@@ -11,7 +11,7 @@ categories: [C++]
 <!--공간 재할당-->
 - `reserve(10)` reserves memory so you can e.g. `push_back(10)` elements without having a reallocation.
 
-`void reserve (size_type n);`  
+> `void reserve (size_type n);`  
 - Request a change in capacity
 - Requests that the vector capacity be at least enough to contain n elements.
 
