[Configuration] Change github ID

--- a/_posts/2019-09-14-BOJ_10872.md
+++ b/_posts/2019-09-14-BOJ_10872.md
@@ -25,7 +25,7 @@ categories: [Algorithm]
 3628800
 
 > 0! 가 1을 의미함을 condition에서 빼면 안되는 것을 주의  
-> 재귀함수에 대한 이해 [Recursive Function](https://mg729.github.io//algorithm/2019/09/15/DataStructure_RecursiveFunction/). 
+> 재귀함수에 대한 이해 [Recursive Function](https://sujinsjlee.github.io//algorithm/2019/09/15/DataStructure_RecursiveFunction/).
 
 
 {% highlight c++ %}
