--- a/_posts/2020-01-25-Git_Pages.md
+++ b/_posts/2020-01-25-Git_Pages.md
@@ -21,7 +21,7 @@ categories: [Git]
  4. *for window users, please delete **".git"** folder*
  5. git init  
  6. git remote add origin [current repository url]  
-    * *git remote add origin https://github.com/mg729/mg729.github.io*
+    * *git remote add origin https://github.com/sujinsjlee/sujinsjlee.github.io*
     * git remote -v   
        * *By above command i can check what repository is connected to local environment* 
  7. git add .  
