--- a/_posts/2019-09-12-BOJ_3052.md
+++ b/_posts/2019-09-12-BOJ_3052.md
@@ -34,7 +34,7 @@ categories: [Algorithm]
 #### 예제 출력
 6
 
-> 배열의 크기가 명시적으로 지정되어있고 일부 배열요소가 초기화된경우, 초기화되지않은 index에 대한 모든 value는 0 으로 세팅된다.[배열 초기화](https://mg729.github.io//c++/2019/09/14/C++_array_intialization/).  
+> 배열의 크기가 명시적으로 지정되어있고 일부 배열요소가 초기화된경우, 초기화되지않은 index에 대한 모든 value는 0 으로 세팅된다.[배열 초기화](https://sujinsjlee.github.io//c++/2019/09/14/C++_array_intialization/).
 > If an explicit array size is specified, but a shorter initialization list is specified, the unspecified elements are set to zero.  
 
 {% highlight c++ %}
